# urban_roads

./: .env_examlpe  Makefile  README.md  compose.yaml  pyproject.toml
apps/api/: main.py  requirements.txt
apps/mlflow/: Dockerfile
apps/pipeline/: Dockerfile  infer_model.py  refresh.py  requirements.txt  run.py  train_model.py
data/: README.md  dist_cent.csv  lt.csv
db/init/: 00_schema.sql  01_views.sql
grafana/dashboards/: ur_mvp.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.yml
