[project]
name = "urban_roads"
version = "0.1.0"
description = "practice"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
